# BuYuChat

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  Info.ios.plist  buyu.db.20260325-154109.bak  tauri.conf.json  tauri.github-release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_initial_schema.sql  0001_add_channel_thinking_tags.sql  0002_add_message_version_timing.sql  0003_add_provider_keys_and_model_sampling.sql  0004_add_conversation_enabled_tools.sql  0005_add_message_version_error_details.sql  001_foundation_resources.sql  001_init.sql  002_conversations_runtime.sql  002_custom_channel_type.sql  003_message_indexes.sql  003_summaries_workflows.sql  004_message_metadata.sql  004_native_plugins_transforms.sql  005_turns_versions.sql  005_variables_v2.sql  20260324000000_init.sql
src-tauri/src/: branch_tests.rs  channel_types.rs  db.rs  error.rs  errors.rs  lib.rs  main.rs  models.rs  smoke_tests.rs  state.rs  types.rs
src-tauri/src/ai/: adapter.rs  mod.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  state.rs  window.rs
src-tauri/src/commands/: agents.rs  api_channels.rs  app.rs  channels.rs  chat.rs  conversation.rs  conversations.rs  incremental.rs  lorebooks.rs  mcp.rs  message.rs  messages.rs  mod.rs  models.rs  plugins.rs  presets.rs  provider.rs  rag.rs  summaries.rs  tool_invocations.rs  tools.rs  transforms.rs  user_profiles.rs  variables.rs  workflows.rs
src-tauri/src/db/: conversation.rs  custom_channel.rs  message.rs  mod.rs  models.rs  pool.rs  provider_config.rs
src-tauri/src/domain/: agents.rs  api_channels.rs  common.rs  content.rs  conversations.rs  incremental.rs  lorebooks.rs  messages.rs  mod.rs  native_capabilities.rs  plugins.rs  presets.rs  summaries.rs  transforms.rs  user_profiles.rs  variables.rs  workflows.rs
src-tauri/src/extensions/: runtime.rs
src-tauri/src/mcp/: builtin.rs  mod.rs  protocol.rs  tools.rs  transport.rs
src-tauri/src/models/: agent.rs  channel.rs  conversation.rs  message.rs  mod.rs  model.rs
src-tauri/src/providers/: anthropic.rs  common.rs  custom.rs  gemini.rs  mod.rs  openai.rs  openai_compatible.rs
src-tauri/src/repo/: agent_repo.rs  channel_repo.rs  conversation_repo.rs  message_repo.rs  migrations.rs  mod.rs  model_repo.rs
src-tauri/src/services/: agent_service.rs  agents.rs  api_channels.rs  channel_service.rs  chat.rs  content.rs  content_store.rs  context_builder.rs  conversation_service.rs  conversations.rs  generation.rs  generation_engine.rs  keyring.rs  logging.rs  lorebooks.rs  mcp.rs  message_service.rs  messages.rs  mod.rs  plugins.rs  presets.rs  provider.rs  rag.rs  summaries.rs  tool_invocations.rs  transforms.rs  user_profiles.rs  variables.rs  (+4 more)
src-tauri/tests/: api_channels_refresh.rs  cmd_agents_test.rs  cmd_channels_test.rs  cmd_conversations_test.rs  cmd_messages_test.rs  cmd_models_test.rs  content_presets_lorebooks.rs  conversations.rs  incremental_patch_events.rs  live_real_api.rs  messages_generation.rs  plugins_native_capabilities.rs  providers.rs  repo_agents_test.rs  repo_channels_test.rs  repo_conversations_test.rs  repo_messages_test.rs  repo_models_test.rs  summaries.rs  transforms.rs  user_profiles_agents.rs  user_profiles_delete.rs  variables.rs  workflows.rs
(+285 files in other folders)
