[package]
name = "buyu"
version = "0.1.0"
description = "Minimal Tauri v2 shell for the BuYu workspace"
authors = ["Admin"]
edition = "2021"
default-run = "buyu"

[lib]
name = "buyu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
