[package]
name = "buyu"
version = "0.1.0"
description = "Minimal Tauri v2 shell for the BuYu workspace"
authors = ["Admin"]
edition = "2021"
default-run = "buyu"

[lib]
name = "buyu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "buyu"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
aisdk = { version = "0.5.2", features = ["openai", "openaicompatible"] }
aisdk-macros = "0.3.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.17"
uuid = { version = "1.18.1", features = ["v7", "serde"] }

[dev-dependencies]
wiremock = "0.6.5"
